2006-01-23 Max Horváth <max.horvath@maxspot.de>
	* Removed compiled PHPdoc documentation
	* moved createDoc.sh to "doc" directory, documentation can be generated on
	  the fly now, in the future we'll be generating a nightly PHPdoc on
	  wifidog.org
	* renamed "ChangeLog" to CHANGELOG, resulting this file being parsed by PHPdoc
	* moved "header.gif" image to its own folder in the images directory
	* touched almost every PHP file in WiFiDog auth server for PHPdoc generating
	  compiling without any warnings
	* Initialized uninitialized variables in Node class
	* Fixed initialization error of one variable
	* Configuration file (config.php) will be read before path detection is
	  being started (otherwise there was no chance to set a manual SYSTEM_PATH)

2006-01-22 Benoit Grégoire  <bock@step.polymtl.ca>
	* common.php:  Real fix for Ticket #59 ;)
	* common.php:  Untested fix for Ticket #59

2006-01-18 François Proulx <francois.proulx@gmail.com>
	* Remove unneeded .cvsignore files since ths svn:ignore property is set to the same list

2006-01-11 Rob Janes <janes.rob@gmail.com>
    * classes/User.php: added setters, getters, throw exceptions, added refresh() subr, tweaked language

2006-01-09 Max Horváth <max.horvath@maxspot.de>
	* createDoc.sh: added description of how to install requirements

2006-01-08 Benoit Grégoire  <bock@step.polymtl.ca>
 	* common.php:  Improve path detection code, and start moving PATH detection back to a central location.
 	You should NEVER go to any $_SERVER[] variables for path related stuff, all you need is already available
 	 in defines.
 	* UserReport.php:  Remove dangling reference to BASEPATH.
 	* install.php:  Use centralised path detection.

2006-01-04 Benoit Grégoire  <bock@step.polymtl.ca>
	* config.php, common.php:  Completely remove SYSTEM_PATH from config.php, making one less config option to manage.  It is now autodetected.

2006-01-03 Rob Janes <janes.rob@gmail.com>
	* added support for classes/EventLogging.php.